Kubernetes/Admin/metadig-nginx/metadig-ingress-controller-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metadig-ingress-controller
  namespace: metadig
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadig-nginx
  template:
    metadata:
      labels:
        app: metadig-nginx
      annotations:
        prometheus.io/port: '10254'
        prometheus.io/scrape: 'true'
    spec:
      serviceAccountName: metadig-ingress-serviceaccount
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"
      #nodeSelector:
        #kubernetes.io/hostname: docker-ucsb-1
      containers:
        - name: metadig-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.14.0
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/metadig-http-backend
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
            - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
            - --annotations-prefix=nginx.ingress.kubernetes.io
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            runAsNonRoot: false
