Kubernetes/Admin/metadig-nginx/metadig-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metadig-nginx
  namespace: metadig
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  selector:
    app: metadig-nginx
